# TODO_back

./: .gitignore  pyproject.toml
core/: settings.py  urls.py
todo/migrations/: 0001_initial.py
